thymeleaf banner size fixed

--- a/src/main/webapp/WEB-INF/template/index1.html
+++ b/src/main/webapp/WEB-INF/template/index1.html
@@ -79,31 +79,47 @@
 		
 	</div>
 	<!-- end:fh5co-header -->
-	<aside id="fh5co-hero" class="js-fullheight">
-		<div class="flexslider js-fullheight">
-			<ul class="slides">
-		   	<li style="background-image: url(images/slider1.jpg);">
-		   		<div class="overlay-gradient"></div>
-		   		<div class="container">
-		   			<div class="col-md-12 col-md-offset-0 text-center slider-text">
-		   				<div class="slider-text-inner js-fullheight">
-		   					<div class="desc">
-		   						<p><span>Find a Friend </span></p>
-		   						<p>for your best friend </p>
-			   					<p>
-			   						<a th:href="@{/friend/list}"  class="btn btn-primary btn-lg">See more</a>
-			   					</p>
-		   					</div>
-		   				</div>
-		   			</div>
-		   		</div>
-		   	</li>
-		   	
-		  	</ul>
-	  	</div>
-	</aside>
+		<aside id="fh5co-hero" class="js-fullheight">
+			<div class="flexslider js-fullheight">
+				<ul class="slides">
+					<li style="background-image: url(images/slider1.jpg);">
+						<div class="overlay-gradient"></div>
+						<div class="container">
+							<div class="col-md-12 col-md-offset-0 text-center slider-text">
+								<div class="slider-text-inner js-fullheight">
+									<div class="desc">
+										<p><span>Find a Friend</span></p>
+										<p> <strong> For your best friend </strong></p>
+										<p>
+										</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</li>
 
-	<!-- Search -->
+					<li style="background-image: url(images/slider1.jpg);">
+						<div class="overlay-gradient"></div>
+						<div class="container">
+							<div class="col-md-12 col-md-offset-0 text-center slider-text">
+								<div class="slider-text-inner js-fullheight">
+									<div class="desc">
+										<p><span>Find a Friend</span></p>
+										<p> <strong> For your best friend </strong></p>
+										<p>
+										</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</li>
+
+				</ul>
+			</div>
+		</aside>
+
+
+		<!-- Search -->
 	<div class="wrap">
 		<div class="container">
 			<div class="row">
