home is receiving data from the back

--- a/src/main/webapp/WEB-INF/template/index1.html
+++ b/src/main/webapp/WEB-INF/template/index1.html
@@ -67,7 +67,7 @@
                                          <li><a href="services.html">A place</a></li>
                                     </ul> -->
                                 </li>
-                                <li><a href="index1.html">Become a Friend</a></li>
+                                <li><a href="contact.html">Become a Friend</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -137,19 +137,19 @@
         <!-- FRIENDS SECTION -->
         <section id="populate_friends">
             <div id="featured-hotel" class="fh5co-bg-color">
-                <div id="offer-table" class="container">
+                <div class="container">
 
                     <div class="row">
-                        <div class="col-md-12">
+                        <div class="feature-full-2col">
                             <div class="section-title text-center">
                                 <h2>Friends</h2>
                             </div>
                         </div>
                     </div>
-                    <div class="row">
-                        <div  class="feature-full-2col">
+                    <div class="row" id="offer-table" >
 
-                        </div>
+
+
                     </div>
 
                 </div>
