--- a/src/main/webapp/WEB-INF/template/contact.html
+++ b/src/main/webapp/WEB-INF/template/contact.html
@@ -105,42 +105,49 @@
                     <div class="col-md-12">
 
                         <div class="row">
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="Name"/>
-                                    </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <input id="name" type="text" class="form-control" placeholder="Name"/>
                                 </div>
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="Email"/>
-                                    </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <input id="email" type="text" class="form-control" placeholder="Email"/>
                                 </div>
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="Phone"/>
-                                    </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <input id="phone" class="form-control" placeholder="Phone"/>
                                 </div>
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="From dd/mm/aaaa"/>
-                                        <br>
-                                        <input type="text" class="form-control" placeholder="To dd/mm/aaaa"/>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <input id="price" class="form-control" placeholder="Price"/>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <input id="city" class="form-control" placeholder="City"/>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <input id="startDate" class="form-control"
+                                           placeholder="From dd/mm/aaaa"/>
+                                    <br>
+                                    <input id="endDate" class="form-control" placeholder="To dd/mm/aaaa"/>
 
-                                    </div>
                                 </div>
-                                <div class="col-md-12">
-                                    <div class="form-group">
+                            </div>
+                            <div class="col-md-12">
+                                <div class="form-group">
                                         <textarea name="" class="form-control" id="" cols="30" rows="7"
                                                   placeholder="Describe yourself"></textarea>
-                                    </div>
                                 </div>
-                                <div class="col-md-12">
-                                    <div class="form-group">
-                                        <button id="#register-button" type="submit" class="btn btn-primary" name="action" value="save">
-                                            Register
-                                        </button>
-                                    </div>
-                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <button id="register-button" type="button" class="btn btn-primary">Register</button>
+                            </div>
                         </div>
                     </div>
 
@@ -182,7 +189,7 @@
                                 <p>Sign up for Friendly news</p>
                                 <form action="#" id="form-subscribe">
                                     <div class="form-field">
-                                        <input type="email" placeholder="Email Address" id="email">
+                                        <input type="email" placeholder="Email Address" id="emailSubscribe">
                                         <input type="submit" id="submit" value="Send">
                                     </div>
                                 </form>
