--- a/src/main/webapp/WEB-INF/template/contact.html
+++ b/src/main/webapp/WEB-INF/template/contact.html
@@ -66,7 +66,7 @@
                                          <li><a href="services.html">A place</a></li>
                                     </ul> -->
                                 </li>
-                                <li><a th:href="@{/host/contact}">Become a Friend</a></li>
+                                <li><a href="#">Become a Friend</a></li>
                             </ul>
                         </nav>
                     </div>
